--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
 
-        <h1>Javascript Sámláló</h1>
+        <h1>Javascript Számláló</h1>
         <div id="result"></div>
         <div id="buttons">
             <button id="minus">-</button>
